<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.lansiacare.ui.auth.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.lansiacare.ui.auth.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_dashboardFragment"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.lansiacare.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_medication"
        android:name="com.lansiacare.ui.medication.MedicationFragment"
        android:label="@string/title_medication"
        tools:layout="@layout/fragment_medication" />

    <fragment
        android:id="@+id/navigation_emergency"
        android:name="com.lansiacare.ui.emergency.EmergencyFragment"
        android:label="@string/title_emergency"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/navigation_medical_notes"
        android:name="com.lansiacare.ui.medicalnotes.MedicalNotesFragment"
        android:label="@string/title_medical_notes"
        tools:layout="@layout/fragment_medical_notes" />

</navigation>